// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingScreen when just made not visible 1`] = `
<div>
  <div
    class="kie-tools--loading-screen"
    id="loading-screen"
  >
    <div
      class="kie-tools--loading-screen loading-finished"
      data-testid="loading-screen-div"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          class="kie-tools--loading-screen-spinner"
        >
          <div>
            <svg
              aria-label="Contents"
              aria-valuetext="Loading..."
              class="pf-v5-c-spinner pf-m-xl"
              role="progressbar"
              viewBox="0 0 100 100"
            >
              <circle
                class="pf-v5-c-spinner__path"
                cx="50"
                cy="50"
                fill="none"
                r="45"
              />
            </svg>
          </div>
          <h5
            class="pf-v5-c-title pf-m-md"
            data-ouia-component-id="OUIA-Generated-Title-2"
            data-ouia-component-type="PF5/Title"
            data-ouia-safe="true"
          >
            Loading...
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoadingScreen when not visible after fadeout delay 1`] = `
<div>
  <div
    class="kie-tools--loading-screen"
    id="loading-screen"
  >
    <div
      class="kie-tools--loading-screen loading-finished"
      data-testid="loading-screen-div"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          class="kie-tools--loading-screen-spinner"
        >
          <div>
            <svg
              aria-label="Contents"
              aria-valuetext="Loading..."
              class="pf-v5-c-spinner pf-m-xl"
              role="progressbar"
              viewBox="0 0 100 100"
            >
              <circle
                class="pf-v5-c-spinner__path"
                cx="50"
                cy="50"
                fill="none"
                r="45"
              />
            </svg>
          </div>
          <h5
            class="pf-v5-c-title pf-m-md"
            data-ouia-component-id="OUIA-Generated-Title-3"
            data-ouia-component-type="PF5/Title"
            data-ouia-safe="true"
          >
            Loading...
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoadingScreen when visible 1`] = `
<div>
  <div
    class="kie-tools--loading-screen"
    id="loading-screen"
  >
    <div
      class="kie-tools--loading-screen "
      data-testid="loading-screen-div"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          class="kie-tools--loading-screen-spinner"
        >
          <div>
            <svg
              aria-label="Contents"
              aria-valuetext="Loading..."
              class="pf-v5-c-spinner pf-m-xl"
              role="progressbar"
              viewBox="0 0 100 100"
            >
              <circle
                class="pf-v5-c-spinner__path"
                cx="50"
                cy="50"
                fill="none"
                r="45"
              />
            </svg>
          </div>
          <h5
            class="pf-v5-c-title pf-m-md"
            data-ouia-component-id="OUIA-Generated-Title-1"
            data-ouia-component-type="PF5/Title"
            data-ouia-safe="true"
          >
            Loading...
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;
